--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>GIT</h1> {
-        
+<p>
+    Este es un cambio hecho en git para HTML 
+</p>        
     }    
 </body>
 </html>
+
