--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>GIT</h1> {
+    <h1 git> GIT </h1> {
 <p>
     Este es un cambio hecho en git para HTML 
 </p>        
