se agrega imagen a HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1 git> GIT </h1> {
 <p>
     Este es un cambio hecho en git para HTML 
+    <img src="https://assets.pokemon.com/static2/_ui/img/account/pokemon-login.png" alt="pokemon"> 
 </p>        
     }    
 </body>
