Agregue un parrafo al html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     Este es un cambio hecho en git para HTML 
     <img src="https://assets.pokemon.com/static2/_ui/img/account/pokemon-login.png" alt="pokemon"> 
 </p>        
+<p>Me caga esa morra</p>
     }    
 </body>
 </html>
